[package]
name = "fashion-clip-rs"
version = "0.1.0"
edition = "2021"
authors = ["canavar"]
description = "A complete(grpc service and lib) Rust inference with multilingual embedding support. This version leverages the power of Rust for both GRPC services and as a standalone library, providing highly efficient text and image embeddings for fashion."
license = "The MIT License"
readme = "README.md"
license-file = "LICENSE.md"
repository = "github.com/yaman/fashion-clip-rs"
keywords = ["fashion", "onnx", "clip", "multilingual", "embedding", "inference", "grpc", "rust"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
itertools = "0.12.0"
num_cpus = "1.16.0"
prost = "0.12.3"
tokenizers = {version = "0.15.0", features = ["hf-hub", "http"] } 
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = {version = "0.10.2", features = ["gzip"]}
image = "0.24.7"
clap = { version = "4.4.8", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0.108"
autometrics = { version = "*", features = ["prometheus-exporter"] }
axum = "0.7.1"
ort = {version = "1.16.3", features = ["load-dynamic"]}
serde = "1.0.193"
toml = "0.8.8"
tonic-health = "0.10.2"


[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
prost = "0.12.3"
approx = "0.5.1"
cargo-tarpaulin = "0.27.2"
