[tool.poetry]
name = "embed-rs"
version = "0.1.0"
description = ""
authors = ["yaman <abdulkadiryaman@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.1.1%2Bcpu-cp311-cp311-linux_x86_64.whl" }
sentence-transformers = "^2.2.2"
toml = "^0.10.2"
tokenizer = "^3.4.3"
transformers = "^4.35.2"
onnx = "^1.15.0"
six = "^1.16.0"
torchvision = "^0.16.1"
pillow = "^10.1.0"
rembg = "^2.0.52"
optimum = {extras = ["onnxruntime"], version = "^1.15.0"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_test_text_data = "tests.data.generate_data:generate_text"
generate_test_image_data = "tests.data.generate_data:generate_image"